clusters/sno/applications/esphome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  labels:
    app.kubernetes.io/name: esphome
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: esphome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: esphome
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: esphome
      automountServiceAccountToken: true
      enableServiceLinks: true
      containers:
        - name: esphome
          image: "esphome/esphome:2026.6.4@sha256:3df4d482ee77ef65a1b5ae2175779529998d0cfb370f1d95ca008110a015d475"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 6052
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: hosts
              mountPath: /etc/hosts
          livenessProbe:
            tcpSocket:
              port: 6052
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 6052
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 6052
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: esphome-config
        - name: cache
          emptyDir: {}
        - name: hosts
          hostPath:
            path: /etc/hosts
