clusters/sno/applications/esphome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
  labels:
    app.kubernetes.io/name: esphome
spec:
  type: ClusterIP
  ports:
    - port: 6052
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: esphome
